--- a/Map Routing/Map Routing/Map Routing.csproj
+++ b/Map Routing/Map Routing/Map Routing.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Graph.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Person.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vertics.cs" />
+    <Compile Include="VerticsNumircal.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
